Changed background colors on the home page - on a slogan and on the overlay pagr to darker to avoid contrast issues.

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -16,7 +16,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 162, 184, .85);
+    background: rgba(23, 162, 184, .95);
     z-index: 9999;
 }
 
