--- a/static/css/base.css
+++ b/static/css/base.css
@@ -191,7 +191,7 @@ nav, #top-nav {
     top: 50%;
     transform: translateY(-50%); 
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.5);  
+    background-color: rgba(0, 0, 0, 0.8);  
     padding: 20px;
 }
 
